--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  <title> 
-    New Title! 
-  </title>
+  <head>
+  <title> New Title! </title>
+  </head>
   <body>
 Hello there, awesome person!
   </body>
