--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title> New Title! </title>
   </head>
   <body>
-Hello there, awesome person!
+    <h1>New header</h1>
+    <h4>Hello there, awesome person!</h4>
   </body>
 </html>
