--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>New header</h1>
     <h4>Hello there, awesome person!</h4>
+    <img src="https://avatars.githubusercontent.com/u/91477863?v=4">
   </body>
 </html>
