--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <h1>New header</h1>
     <h4>Hello there, awesome person!</h4>
     <img src="https://avatars.githubusercontent.com/u/91477863?v=4">
+    <ol>
+      <li>This is</li>
+      <li>ordered list</li>
+    </ol>
+    <ul>
+      <li>This is</li>
+      <li>unordered lists</li>
   </body>
 </html>
