--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <ul>
       <li>This is</li>
       <li>unordered lists</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
   </body>
 </html>
